Update generated ebuild to install all files included in tarball