@@ -1,13 +1,17 @@
+-Dawt.useSystemAAFontSettings=lcd
+-Djava.net.preferIPv4Stack=true
+-Dsun.io.useCanonCaches=false
+-Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine
+-Dsun.awt.keepWorkingSetOnMinimize=true
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:+UseConcMarkSweepGC
+-XX:MaxPermSize=512m
+-XX:MaxTenuringThreshold=15
+-XX:ReservedCodeCacheSize=240m
+-XX:SurvivorRatio=4
+-XX:TargetSurvivorRatio=75
+-XX:SoftRefLRUPolicyMSPerMB=50
 -Xms128m
 -Xmx2048m
--XX:MaxPermSize=512m
--XX:ReservedCodeCacheSize=128m
 -ea
 -server
--Dsun.awt.keepWorkingSetOnMinimize=true
--XX:ParallelGCThreads=4 
--XX:+UseConcMarkSweepGC 
--XX:+UseParNewGC 
--XX:SurvivorRatio=4 
--XX:TargetSurvivorRatio=75 
--XX:MaxTenuringThreshold=15
